# databard

./: .env.example  .gitignore  .output.txt  AGENTS.md  BROWSER_AUTOMATION.md  KIRO.md  LICENSE  LOOP.md  README.md  TESTING.md  dither-kit.json  ecosystem.config.cjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  test-openmetadata.js  tsconfig.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
blog/: testsprite-loop-article.md
contracts/escrow/programs/escrow/: Cargo.toml
contracts/escrow/programs/escrow/src/: lib.rs
data/: mints.json
docs/: AZURE.md  CONTENT_PLAYBOOK.md  CORAL_HACKATHON.md  CORAL_PRODUCTION.md  DATA_SOURCES_ARCHITECTURE.md  DEMO_RUNBOOK.md  DEMO_VIDEO_SCRIPT.md  DESIGN.md  FIELD_SALES_ALLOCATION.md  GTM.md  OPENMETADATA_HACKATHON.md  OPERATIONS.md  PALM_USD_INTEGRATION.md  PITCH_SCRIPT.md  PLAN.md  PROVIDER_BENCH.md  PURVIEW_ADAPTER.md  QA_CHEAT_SHEET.md  STRATEGY.md  SUBMISSION.md  TESTING.md  UNIT_ECONOMICS.md  ZERVEHACK_PITCH.md
public/: robots.txt  sample-anthem-enterprise.json  sample-anthem-web3.json  sample-episode-dune.json  sample-episode-web3.json  sample-episode.json
scripts/: capture-demo.mjs  check-bundle-size.mjs  cleanup-deploy.mjs  compose-demo-video.sh  concat-demo.sh  coral-bridge.mjs  deploy.sh  generate-audio-via-web.js  generate-bgm.mjs  generate-demo-automated.js  generate-demo-via-web.md  generate-demo.js  generate-voiceover.mjs  nginx-databard.conf  prepare-for-web-tts.js  prepare-standalone.mjs  rollback.sh  test-browser-use.sh
(+277 files in other folders)
